# linescore

./: CLAUDE.md  DECISIONS.md  MVP_PLAN.md  PLAN.md  POC.py  STATUS.md  initial_conversation.txt  pyproject.toml
linescore/: __init__.py  __main__.py  cli.py  models.py  reporting.py  scorer.py
linescore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
linescore/backends/: __init__.py  anthropic.py  claude_code.py  groq_backend.py  llamacpp.py
linescore/checks/: __init__.py  file_to_folder.py  line_to_function.py  name_to_file.py
linescore/judges/: __init__.py  claude_code.py
linescore/languages/: __init__.py  python.py
linescore/parsers/: __init__.py  python.py
tests/: test_backends.py  test_check_file_to_folder.py  test_check_line_to_function.py  test_check_name_to_file.py  test_cli.py  test_judge_claude_code.py  test_language_python.py  test_parser_python.py  test_reporting.py  test_scorer.py
