[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linescore"
version = "0.1.0"
description = "Code quality heuristic: can an AI guess which function a line belongs to?"
requires-python = ">=3.11"

[project.scripts]
linescore = "linescore.cli:main"
